--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="container">
-    <div id="prop-container" itemscope itemtype="https://schema.org/Product">
+<div id="container" class="container">
 
-    </div>
 </div>
 
 </body>
