--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Item prop test</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
 </head>
 <body>
-<div id="container" class="container">
+    <div id="container" class="container">
 
-</div>
-
-</body>
-
+    </div>
+</body>g
+<script src="script.js"></script>
 </html>
