--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div id="container" class="container">
-
+        ...nothing
     </div>
-</body>g
+</body>
 <script src="script.js"></script>
 </html>
